<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_order"
        android:orderInCategory="100"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="90"
        android:icon="@drawable/ic_status_icon"
        android:title="@string/action_status"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favorties"
        android:orderInCategory="80"
        android:title="@string/action_favorties"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_contact"
        android:orderInCategory="70"
        android:title="@string/action_contact"/>



</menu>